modified:   Index.html 	modified:   blog.html 	modified:   css/format.css 	modified:   css/styles.css 	modified:   data/knowledge_sharing.json 	renamed:    images/reactnantive.jpeg -> images/reactnative.jpeg 	new file:   js/knowledge_sharing.js 	modified:   knowledge_sharing.html

--- a/data/knowledge_sharing.json
+++ b/data/knowledge_sharing.json
@@ -192,8 +192,7 @@
             "name": "Chemistry Basic",
             "image": "chemical.jpeg",
             "field": [
-                  "technology",
-                  "managerment"
+                  "science"
             ]
       },
       {
@@ -216,7 +215,7 @@
       {
             "id": "027",
             "name": "Statistic",
-            "image": "statistic.jpg",
+            "image": "statistics.jpg",
             "field": [
                   "science"
             ]
